# idledash

./: Cargo.toml  GEMINI.md  README.md  config.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  disks.rs  main.rs  system.rs  time.rs  ui.rs  vcs.rs
