[package]
name = "idledash"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
sysinfo = "0.37.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
git2 = "0.20.2"
jwalk = "0.8.1"
tui-big-text = "0.7.0"
